--- a/indhold.html
+++ b/indhold.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="robots" content="noindex">
+    <title>Indhold</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="layout.css">
@@ -13,13 +14,23 @@
 
 <body>
     <header>
-        <ul>
-            <li><a href="ux_ui.html">Ux/Ui</a></li>
-            <li><a href="emnesite.html">Emnesite</a></li>
-            <li><a href="animation.html">Animation</a></li>
-            <li><a href="indhold.html">Indhold</a></li>
-        </ul>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Forside</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="om_mig.html">Om mig</a></li>
+            </ul>
+            <div class="burger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+        </nav>
     </header>
+    <h1>Indhold</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo autem consequatur, voluptatibus earum dolor
+        cumque, ratione sed eum rerum amet dignissimos quisquam dolores fugiat accusantium aspernatur tempora voluptatem
+        minima voluptates?</p>
 
 </body>
 
