--- a/om_mig.html
+++ b/om_mig.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
-    <title>Forside</title>
+    <title>Om mig</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="layout.css">
@@ -27,12 +27,8 @@
             </div>
         </nav>
     </header>
-    <h1>Portfolio Version1</h1>
-    <h1>Mentha Tang</h1>
+    <h1>Om Mentha Tang Mikkelsen</h1>
 
-
-
-    <footer></footer>
     <script src="bobler.js"></script>
 </body>
 
