bobble og styling

--- a/animation.html
+++ b/animation.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="bobler.js">
+
 </head>
 
 <body>
@@ -27,11 +27,33 @@
             </div>
         </nav>
     </header>
-    <h1>Animation</h1>
+    <h1>Tema 4 - Animation</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo autem consequatur, voluptatibus earum dolor
         cumque, ratione sed eum rerum amet dignissimos quisquam dolores fugiat accusantium aspernatur tempora voluptatem
         minima voluptates?</p>
-    <a href="indhold.html">Gå til næste tema</a>
+    <div class="videre">
+        <a href="indhold.html">Næste tema</a>
+    </div>
+    <footer>
+        <div class="tocol">
+            <div class="footergrid">
+                <h3 class="footerhead"> Hold</h3>
+                <div class="footerp">
+                    <p>1B Vinterstart 2025</p>
+                    <p>Lavet af Mentha Tang</p>
+                </div>
+            </div>
+
+
+            <div class="footergrid">
+                <h3 class="footerhead">Kontakt</h3>
+                <div class="footerp">
+                    <p>mtangm@hotmail.com</p>
+                    <p>Tlf +45 40172703</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="bobler.js"></script>
 </body>
 
