--- a/om_mig.html
+++ b/om_mig.html
@@ -7,9 +7,9 @@
     <meta name="robots" content="noindex">
     <title>Om mig</title>
 
-    <link rel="stylesheet" href="style.css">
+
     <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="bobler.js">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -30,6 +30,26 @@
     <h1>Om Mentha Tang Mikkelsen</h1>
 
     <script src="bobler.js"></script>
+    <footer>
+        <div class="tocol">
+            <div class="footergrid">
+                <h3 class="footerhead"> Hold</h3>
+                <div class="footerp">
+                    <p>1B Vinterstart 2025</p>
+                    <p>Lavet af Mentha Tang</p>
+                </div>
+            </div>
+
+
+            <div class="footergrid">
+                <h3 class="footerhead">Kontakt</h3>
+                <div class="footerp">
+                    <p>mtangm@hotmail.com</p>
+                    <p>Tlf +45 40172703</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
