--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="bobler.js">
+
 </head>
 
 <body>
@@ -27,27 +27,41 @@
             </div>
         </nav>
     </header>
+
     <h1>Portfolio Version1</h1>
-    <h1>Mentha Tang</h1>
 
-    <a href="ux_ui.html">UX/UI</a>
+    <section class="tema">
+
+        <h2> <a href="emnesite.html">Emnesite</a></h2>
 
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione aspernatur ad iste fuga laborum doloremque
-        voluptas, pariatur necessitatibus vitae natus unde perspiciatis porro recusandae corrupti ducimus libero ab
-        sequi nulla.</p>
-    <a href="emnesite.html">Emnesite</a>
+        <h2> <a href="ux_ui.html">UX/UI</a></h2>
 
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta numquam voluptas et quam commodi? Ipsa ad quam,
-        placeat fugit corporis rerum blanditiis nostrum aspernatur rem in, tempore praesentium! Eligendi, aliquam?</p>
-    <a href="animation.html">Animation</a>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, eaque reprehenderit fuga et aut harum obcaecati
-        doloremque ipsa cumque nisi asperiores accusamus maiores numquam nobis, provident veritatis cum quis quae!
-    </p>
-    <a href="indhold.html">Indhold</a>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni quo ab eius iure sed voluptatem dolores eligendi,
-        minima minus saepe quae optio veritatis vel explicabo soluta maxime ratione! Eius, maxime!</p>
-    <footer></footer>
+        <h2><a href="animation.html">Animation</a></h2>
+
+        <h2><a href="indhold.html">Indhold</a></h2>
+
+    </section>
+    <footer>
+        <div class="tocol">
+            <div class="footergrid">
+                <h3 class="footerhead"> Hold</h3>
+                <div class="footerp">
+                    <p>1B Vinterstart 2025</p>
+                    <p>Lavet af Mentha Tang</p>
+                </div>
+            </div>
+
+
+            <div class="footergrid">
+                <h3 class="footerhead">Kontakt</h3>
+                <div class="footerp">
+                    <p>mtangm@hotmail.com</p>
+                    <p>Tlf +45 40172703</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="bobler.js"></script>
 </body>
 
