--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="bobler.js">
+
 </head>
 
 <body>
@@ -27,13 +27,36 @@
             </div>
         </nav>
     </header>
-    <h1>Portfolio Version1</h1>
-    <h1>Mentha Tang</h1>
+    <div class="forside">
+        <h1>Portfolio Version1</h1>
+        <h1>Mentha Tang</h1>
+    </div>
 
-
-
-    <footer></footer>
+    <div id="bobbel_container1">
+        <div id="bobbel_sprite1"></div>
+    </div>
     <script src="bobler.js"></script>
+    <footer>
+        <div class="tocol">
+            <div class="footergrid">
+                <h3 class="footerhead"> Hold</h3>
+                <div class="footerp">
+                    <p>1B Vinterstart 2025</p>
+                    <p>Lavet af Mentha Tang</p>
+                </div>
+            </div>
+
+
+            <div class="footergrid">
+                <h3 class="footerhead">Kontakt</h3>
+                <div class="footerp">
+                    <p>mtangm@hotmail.com</p>
+                    <p>Tlf +45 40172703</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
