--- a/ux_ui.html
+++ b/ux_ui.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="bobler.js">
+
 </head>
 
 <body>
@@ -28,13 +28,34 @@
             </div>
         </nav>
     </header>
-    <h1>Tema UX/UI</h1>
+    <h1>Tema 3 - UX/UI</h1>
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo autem consequatur, voluptatibus earum dolor
         cumque, ratione sed eum rerum amet dignissimos quisquam dolores fugiat accusantium aspernatur tempora voluptatem
         minima voluptates?</p>
+    <div class="videre">
+        <a href="animation.html">Næste tema</a>
+    </div>
+    <footer>
+        <div class="tocol">
+            <div class="footergrid">
+                <h3 class="footerhead"> Hold</h3>
+                <div class="footerp">
+                    <p>1B Vinterstart 2025</p>
+                    <p>Lavet af Mentha Tang</p>
+                </div>
+            </div>
 
-    <a href="emnesite.html">Næste tema</a>
+
+            <div class="footergrid">
+                <h3 class="footerhead">Kontakt</h3>
+                <div class="footerp">
+                    <p>mtangm@hotmail.com</p>
+                    <p>Tlf +45 40172703</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="bobler.js"></script>
 </body>
 
