--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
     <div id="bobbel_container1">
         <div id="bobbel_sprite1"></div>
     </div>
+    <div id="bobbel_container2">
+        <div id="bobbel_sprite2"></div>
+    </div>
+    <div id="bobbel_container3">
+        <div id="bobbel_sprite3"></div>
+    </div>
+
     <script src="bobler.js"></script>
     <footer>
         <div class="tocol">
