--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,9 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="layout.css">
-
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik+Glitch&family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=WDXL+Lubrifont+TC&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -30,18 +32,14 @@
 
     <h1>Portfolio Version1</h1>
 
-    <section class="tema">
-
-        <h2> <a href="emnesite.html">Emnesite</a></h2>
-
-
-        <h2> <a href="ux_ui.html">UX/UI</a></h2>
-
-        <h2><a href="animation.html">Animation</a></h2>
-
-        <h2><a href="indhold.html">Indhold</a></h2>
+    <section class="portfoliocol">
+        <h2 class="underline-on-hover"><a href="emnesite.html">Emnesite</a></h2>
+        <h2 class="underline-on-hover"><a href="ux_ui.html">Ux/Ui</a></h2>
+        <h2 class="underline-on-hover"><a href="animation.html">Animation</a></h2>
+        <h2 class="underline-on-hover"><a href="indhold.html">Indhold</a></h2>
 
     </section>
+
     <footer>
         <div class="tocol">
             <div class="footergrid">
@@ -62,7 +60,7 @@
             </div>
         </div>
     </footer>
-    <script src="bobler.js"></script>
+    <script src="burger.js"></script>
 </body>
 
 </html>
