--- a/emnesite.html
+++ b/emnesite.html
@@ -9,7 +9,9 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="layout.css">
-
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik+Glitch&family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=WDXL+Lubrifont+TC&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -54,7 +56,8 @@
             </div>
         </div>
     </footer>
-    <script src="bobler.js"></script>
+
+    <script src="burger.js"></script>
 </body>
 
 </html>
