--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="layout.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik+Glitch&family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=WDXL+Lubrifont+TC&display=swap"
+        rel="stylesheet">
+
 
 </head>
 
@@ -35,13 +41,9 @@
     <div id="bobbel_container1">
         <div id="bobbel_sprite1"></div>
     </div>
-    <div id="bobbel_container2">
-        <div id="bobbel_sprite2"></div>
-    </div>
-    <div id="bobbel_container3">
-        <div id="bobbel_sprite3"></div>
-    </div>
 
+
+    <script src="burger.js"></script>
     <script src="bobler.js"></script>
     <footer>
         <div class="tocol">
