--- a/indhold.html
+++ b/indhold.html
@@ -9,7 +9,9 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="layout.css">
-
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik+Glitch&family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=WDXL+Lubrifont+TC&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -31,7 +33,7 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo autem consequatur, voluptatibus earum dolor
         cumque, ratione sed eum rerum amet dignissimos quisquam dolores fugiat accusantium aspernatur tempora voluptatem
         minima voluptates?</p>
-    <script src="bobler.js"></script>
+
     <footer>
         <div class="tocol">
             <div class="footergrid">
@@ -52,6 +54,7 @@
             </div>
         </div>
     </footer>
+    <script src="burger.js"></script>
 </body>
 
 </html>
