pynte og knapper

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,14 +29,22 @@
             </div>
         </nav>
     </header>
-
+    <div class="porttop"></div>
     <h1>Portfolio Version1</h1>
 
     <section class="portfoliocol">
-        <h2 class="underline-on-hover"><a href="emnesite.html">Emnesite</a></h2>
-        <h2 class="underline-on-hover"><a href="ux_ui.html">Ux/Ui</a></h2>
-        <h2 class="underline-on-hover"><a href="animation.html">Animation</a></h2>
-        <h2 class="underline-on-hover"><a href="indhold.html">Indhold</a></h2>
+        <div>
+            <h2 class="underline-on-hover"><a href="emnesite.html">Emnesite</a></h2>
+        </div>
+        <div>
+            <h2 class="underline-on-hover"><a href="ux_ui.html">Ux/Ui</a></h2>
+        </div>
+        <div>
+            <h2 class="underline-on-hover"><a href="animation.html">Animation</a></h2>
+        </div>
+        <div>
+            <h2 class="underline-on-hover"><a href="indhold.html">Indhold</a></h2>
+        </div>
 
     </section>
 
