--- a/ux_ui.html
+++ b/ux_ui.html
@@ -36,7 +36,7 @@
         cumque, ratione sed eum rerum amet dignissimos quisquam dolores fugiat accusantium aspernatur tempora voluptatem
         minima voluptates?</p>
     <div class="videre">
-        <a href="animation.html">Næste tema</a>
+        <h3><a href="animation.html">Næste tema</a></h3>
     </div>
     <footer>
         <div class="tocol">
