--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         <h1>Mentha Tang</h1>
     </div>
 
+    <div></div>
+    <h2 class="underline-on-hover"> <a href="portfolio.html">ENTER</a></h2>
+    <div></div>
+
+
     <div id="bobbel_container1">
         <div id="bobbel_sprite1"></div>
     </div>
