--- a/emnesite.html
+++ b/emnesite.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
-    <title>Emnesite</title>
+    <title>Studiestartsprøven</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="layout.css">
@@ -29,13 +29,70 @@
             </div>
         </nav>
     </header>
-    <h1>Tema 2 - Emnesite</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo autem consequatur, voluptatibus earum dolor
-        cumque, ratione sed eum rerum amet dignissimos quisquam dolores fugiat accusantium aspernatur tempora voluptatem
-        minima voluptates?</p>
-    <div class="videre">
-        <a href="ux_ui.html">Næste tema</a>
+    <h1>Tema 2 - Studiestartsprøven</h1>
+
+    <div class="studiestartcol">
+        <div>
+            <p>Studiestartsprøven gik ud på at vi skulle designe en hjemmeside fra bunden af. Sitets indhold det vil
+                sige
+                tekst
+                og
+                billeder var allerede bestemt af underviserne. Alt indholdet skulle styles efter nogle faste
+                layoutdiagrammer og
+                wireframes. Studiestartsprøven var den sidste opgave af tema 2. Jeg lærte grundlæggende html og css for
+                at
+                kunne
+                kode
+                sitet selv. Derudover lærte vi om grundlæggende design principper såsom gestalt lovene.</p>
+        </div>
+        <div class="studiestartimg1">
+            <img src="galleri/studieprove1.webp" alt="Studiestartsprøven">
+        </div>
     </div>
+
+    <div class="studiestartcol">
+        <div class="studiestartimg">
+            <img src="galleri/studieprove2.webp" alt="Min computer">
+        </div>
+        <div class="studiestarttxt">
+            <p>Denne studiestartsprøve var første gang jeg havde kodet en site med flere sider. Vi arbejdede udfra
+                mobile
+                first
+                og
+                dernæst desktopversionen. Det var sjovt at kunne sætte sit eget præg på sitet selvom alt indholdet havde
+                vi
+                fået
+                på
+                forhånd fra underviserne. Derudover lærte vi at bruge columns og grids i vores kode, hvilket jeg fandt
+                ret
+                udfordrende.
+                Men med lidt hjælp fra en sød medstuderende, fik jeg alt til at stå som det skulle udfra de
+                layoutdiagrammer
+                og
+                wireframes vi havde at arbejde med.</p>
+
+            <div>
+                <h3><a href="http://menthatm.dk/kea/02_web/website/index.html">Klik her for at se Studiestartsprøven</a>
+                </h3>
+            </div>
+        </div>
+
+
+
+
+    </div>
+
+    <div>
+        <div>
+            <h2 class="underline-on-hover"> <a href="ux_ui.html">Næste tema</a></h2>
+        </div>
+    </div>
+
+
+
+
+
+
     <footer>
         <div class="tocol">
             <div class="footergrid">
