--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <h1>Mentha Tang</h1>
     </div>
 
-    <div></div>
-    <h2 class="underline-on-hover"> <a href="portfolio.html">ENTER</a></h2>
-    <div></div>
+    <div class="mellemrumbob">
+        <h2 class="underline-on-hover"> <a href="portfolio.html">ENTER</a></h2>
+    </div>
 
 
     <div id="bobbel_container1">
