--- a/indhold.html
+++ b/indhold.html
@@ -29,10 +29,46 @@
             </div>
         </nav>
     </header>
+
     <h1>Tema 5 - Indhold</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo autem consequatur, voluptatibus earum dolor
-        cumque, ratione sed eum rerum amet dignissimos quisquam dolores fugiat accusantium aspernatur tempora voluptatem
-        minima voluptates?</p>
+    <div class="indholdlayout">
+        <div>
+            <p>I tema 5 blev vi indelt i grupper for at lave et redesign af en eksisterende hjemmeside. Alt indholdet på
+                sitet
+                skulle
+                være vores eget. Min gruppe og jeg mødtes ved Tante T inde i torvehallerne. Vi tog billeder af te
+                butikken og te
+                bøtterne som skulle bruges i vores re-designet website. Samme dag blev der oprettet en github, trello,
+                og figma
+                så vi
+                kunne dele vores brainstorms, research og kode med hinanden.Personligt er jeg veltilfreds med det
+                redesign som
+                min gruppe og jeg fik afleveret. Vi arbejdet godt sammen som
+                et hold
+                og fuldførte opgaven. Til den mundtlige præsentation fik vi at vide at vi kunne have arbejdet mere med
+                typografien og
+                loven om nærhed på vores site.</p>
+        </div>
+
+        <div class="tantemood">
+            <img src="galleri/indhold2.webp" alt="Tante T moodboards">
+        </div>
+    </div>
+    <div class="tantere">
+        <img src="galleri/indhold1.webp" alt="Tante T redesign">
+        <img src="galleri/tanteproto.webp" alt="">
+    </div>
+
+
+
+    <div>
+        <div>
+            <h2 class="underline-on-hover"> <a href="om_mig.html">Videre</a></h2>
+        </div>
+    </div>
+
+
+
 
     <footer>
         <div class="tocol">
