--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
 
     <section class="portfoliocol">
         <div>
-            <h2 class="underline-on-hover"><a href="emnesite.html">Emnesite</a></h2>
+            <h2 class="underline-on-hover"><a href="emnesite.html">Studiestartsprøven</a></h2>
         </div>
         <div>
             <h2 class="underline-on-hover"><a href="ux_ui.html">Ux/Ui</a></h2>
