--- a/ux_ui.html
+++ b/ux_ui.html
@@ -32,12 +32,61 @@
     </header>
     <h1>Tema 3 - UX/UI</h1>
 
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo autem consequatur, voluptatibus earum dolor
-        cumque, ratione sed eum rerum amet dignissimos quisquam dolores fugiat accusantium aspernatur tempora voluptatem
-        minima voluptates?</p>
-    <div class="videre">
-        <h3><a href="animation.html">Næste tema</a></h3>
+    <div class="uxui">
+        <div>
+            <p>I tema 3 udviklede og designede jeg en hjemmeside om queer fælleskaber i København. På sitet kan brugeren
+                finde
+                anbefalinger til Københavns LGBT+ fælleskaber, events, og steder.
+                Ved at lave desktop research, fik jeg indblik i hvordan de fleste hjemmesider som havde guides til LGBT+
+                steder
+                i byen
+                havde homoseksuelle mænd som deres målgruppe. Disse guides anbefalet de samme homo-barer og saunaer. Som
+                en
+                transkvinde
+                følte jeg at der manglede et samlet overblik over LGBT+ fælleskaber og steder, hvor alle var velkomne
+                uanset
+                seksualitet
+                eller kønsidentitet. Igennem min research fik jeg insigter i problemstillinger som jeg ikke kendte til
+                og brugte
+                disse
+                insigter som udgangspunkt til mit design process.
+            </p>
+            <p>Under min design process lavede jeg moodboards og styletiles, som jeg testet i en ”5-sekunders test”.
+                Denne test
+                gav mig
+                nogle gode resultater i forhold til fx hvilke farver og billeder jeg skulle bruge for at øge
+                brugervenligheden
+                og
+                brugerens umiddelbare tanker i forhold til sitets indhold. Resultaterne viste at der var en god
+                forståelse for
+                sitets
+                indhold. Set i bakspejlet havde det været en god ide også at lave en ”tænke højt test” for at danne mig
+                flere
+                indsigter
+                i sitets brugervenlighed og andre eventuelle bemærkninger.</p>
+            <div class="uxuiimg">
+
+                <div class="styletile"><img src="galleri/uxui3.png" alt="Styletile">
+                    <img src="galleri/uxui4.webp" alt="">
+                </div>
+
+            </div>
+        </div>
+
+        <div>
+            <img src="galleri/uxui1.webp" alt="Queerbook forside">
+            <img src="galleri/uxui2.webp" alt="Events">
+        </div>
+        <h3><a href="https://www.menthatm.dk/kea/03_ux/EMNESITE_QUEERBOOK/">Klik her for at gå til QUEERBOOK</a></h3>
     </div>
+
+    <div>
+        <h2 class="underline-on-hover"> <a href="animation.html">Næste tema</a></h2>
+    </div>
+
+
+
+
     <footer>
         <div class="tocol">
             <div class="footergrid">
