--- a/om_mig.html
+++ b/om_mig.html
@@ -31,8 +31,23 @@
         </nav>
     </header>
     <h1>Om Mentha Tang Mikkelsen</h1>
-
-
+    <div class="ommig">
+        <div>
+            <p>Mit navn er Mentha Tang Mikkelsen. Jeg er 24 år gammel og har boet i 4 forskellige lande. Udover dansk
+                kan
+                jeg
+                tale
+                engelsk, spansk, HTML, og CSS. Udover at være en polyglot er jeg også aktivist i Bøssehuset og medlem af
+                TRANSCORE. Når
+                jeg ikke transer rundt kan jeg lide at lave mad med en true crime podcast i baggrunden. Mine venner
+                ville
+                beskrive mig
+                som sjov, kærlig og autentisk.</p>
+        </div>
+        <div class="mentha">
+            <img src="galleri/mentha.webp" alt="Mig">
+        </div>
+    </div>
     <footer>
         <div class="tocol">
             <div class="footergrid">
