--- a/animation.html
+++ b/animation.html
@@ -40,7 +40,8 @@
                 samme
                 hvem
                 der
-                skulle være protagonisten i mit spil – nemlig fløjtemanden. Den velkendte gademusikant som har
+                skulle være protagonisten i mit spil – nemlig fløjtemanden. </p>
+            <p>Den velkendte gademusikant som har
                 velsignede
                 forbigåendes
                 øre i mange år, med sin blokfløjte og en ko hat på hovedet. Dog har han ikke været at finde på
