--- a/om_mig.html
+++ b/om_mig.html
@@ -43,11 +43,27 @@
                 ville
                 beskrive mig
                 som sjov, kærlig og autentisk.</p>
+
+
         </div>
         <div class="mentha">
             <img src="galleri/mentha.webp" alt="Mig">
         </div>
     </div>
+    <p>Det sidste halve år er gået stærkt. Jeg er startet på en ny og spændende uddannelse, flyttet til en ny bydel, og
+        fået
+        en
+        masse nye venner. Min nye hverdag er en som jeg springer ud af sengen for. At lære at kode i HTML,CSS og
+        JavaScript
+        er
+        ikke nemt. En af mine undervisere sagde at det er ligesom at lære at tale kinesisk. Denne sammenligning var
+        meget
+        fortrøstningsfuld for mig, da vi blev introduceret for JS. Når jeg kigger tilbage på min 1 semesters portfolio
+        er
+        jeg
+        stolt over det som jeg har opnået. Dog ser jeg også en masse plads til forbedring. Jeg glæder mig til at komme i
+        gang
+        med 2 semester.</p>
     <footer>
         <div class="tocol">
             <div class="footergrid">
