--- a/emnesite.html
+++ b/emnesite.html
@@ -71,8 +71,10 @@
                 og
                 wireframes vi havde at arbejde med.</p>
 
+
             <div>
-                <h3><a href="http://menthatm.dk/kea/02_web/website/index.html">Klik her for at se Studiestartsprøven</a>
+                <h3><a href="http://menthatm.dk/kea/02_web/website/index.html" target="_blank">Klik her for at se
+                        Studiestartsprøven</a>
                 </h3>
             </div>
         </div>
