--- a/indhold.html
+++ b/indhold.html
@@ -33,21 +33,25 @@
     <h1>Tema 5 - Indhold</h1>
     <div class="indholdlayout">
         <div>
-            <p>I tema 5 blev vi indelt i grupper for at lave et redesign af en eksisterende hjemmeside. Alt indholdet på
-                sitet
-                skulle
+            <p> I tema 5 blev vi indelt i grupper for at lave et redesign af en eksisterende hjemmeside. Alt indholdet
+                på sitet skulle
                 være vores eget. Min gruppe og jeg mødtes ved Tante T inde i torvehallerne. Vi tog billeder af te
                 butikken og te
                 bøtterne som skulle bruges i vores re-designet website. Samme dag blev der oprettet en github, trello,
-                og figma
-                så vi
-                kunne dele vores brainstorms, research og kode med hinanden.Personligt er jeg veltilfreds med det
-                redesign som
-                min gruppe og jeg fik afleveret. Vi arbejdet godt sammen som
-                et hold
-                og fuldførte opgaven. Til den mundtlige præsentation fik vi at vide at vi kunne have arbejdet mere med
-                typografien og
-                loven om nærhed på vores site.</p>
+                og figma så vi
+                kunne dele vores brainstorms, research og kode med hinanden. Noget af vores research bestod af at lave
+                Lighthouse test,
+                Likert test og Heuristisk test. Resultaterne fra disse undersøgelser implementerede vi i vores endelige
+                redesign af
+                Tante T.</p>
+
+            <p>Personligt er jeg veltilfreds med det redesign som min gruppe og jeg fik afleveret. Vi arbejdet godt
+                sammen som et hold
+                og fik fuldført opgaven. Til den mundtlige præsentation fik vi at vide at vi kunne have arbejdet mere
+                med typografien og
+                gestalt lovene på vores site. Derudover var der noget clash i linjerne som blev brugt i illustrationerne
+                som ikke
+                passede med resten af sitets design udtryk. </p>
         </div>
 
         <div class="tantemood">
@@ -56,8 +60,15 @@
     </div>
     <div class="tantere">
         <img src="galleri/indhold1.webp" alt="Tante T redesign">
-        <img src="galleri/tanteproto.webp" alt="">
+        <img src="galleri/tanteproto.webp" alt="Tante t prototype">
+        <div class="parent">
+            <img class="test1" src="galleri/light.webp" alt="Lighthouse test">
+            <img class="test2" src="galleri/likert.webp" alt="Likert test">
+        </div>
     </div>
+
+
+
 
 
 
