--- a/ux_ui.html
+++ b/ux_ui.html
@@ -76,9 +76,13 @@
         <div>
             <img src="galleri/uxui1.webp" alt="Queerbook forside">
             <img src="galleri/uxui2.webp" alt="Events">
+
         </div>
-        <h3><a href="https://www.menthatm.dk/kea/03_ux/EMNESITE_QUEERBOOK/">Klik her for at gå til QUEERBOOK</a></h3>
+        <h3><a href="queerbook.pdf" target="_blank">Klik her process documentation</a></h3>
+        <h3><a href="https://www.menthatm.dk/kea/03_ux/EMNESITE_QUEERBOOK/" target="_blank">Klik her for at gå til
+                QUEERBOOK</a></h3>
     </div>
+
 
     <div>
         <h2 class="underline-on-hover"> <a href="animation.html">Næste tema</a></h2>
