--- a/animation.html
+++ b/animation.html
@@ -87,7 +87,8 @@
 
 
         <div class="image3"><img src="galleri/animation1.webp" alt="Fløjtemand spil"></div>
-        <h3><a href="https://www.menthatm.dk/kea/04_animation/versionF/spil.html">Klik her for at prøve Fløjtemands
+        <h3><a href="https://www.menthatm.dk/kea/04_animation/versionF/spil.html" target="_blank">Klik her for at prøve
+                Fløjtemands
                 spillet
                 for
                 dig selv!</a></h3>
